--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -77,7 +77,7 @@ select {
 //end of defaults
 
 html {
-    overflow-y: scroll;
+    overflow: hidden;
     width: 100%;
 }
 
@@ -170,27 +170,26 @@ a {
     background: #333;
     box-shadow: 0px 0px 20px rgba(153, 153, 153, .8);
 
-    a {
-        div {
-            width: 100%;
-            height: 64px;
-            color: white;
-            font-weight: inherit;
-            font-size: 20px;
-            line-height: 64px;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.08);
-            transition: color .2s;
+    div {
+        width: 100%;
+        height: 64px;
+        color: white;
+        font-weight: inherit;
+        font-size: 20px;
+        line-height: 64px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+        transition: color .2s;
+        cursor: pointer;
 
-            &:hover {
-                color: $primary-orange;
-            }
-
+        &:hover {
+            color: $primary-orange;
         }
+
     }
 
     .scrollbar {
         width: 100%;
-        height: calc(100vh - 130px);
+        height: calc(100vh - 127px);
         overflow-y: scroll;
 
         &::-webkit-scrollbar {
@@ -335,13 +334,22 @@ a {
 
     .main{
         display: none;
-        width: 100%;
-        height: calc(100vh - 129px);
+
+        &.active{
+            display: block;
+            width: 100%;
+            height: calc(100vh - 129px);
+        }
     }
 
     .orders{
-        width: 100%;
-        height: calc(100vh - 129px);
+        display: none;
+
+        &.active{
+            display: block;
+            width: 100%;
+            height: calc(100vh - 129px);
+        }
 
         .sort-menu{
             display: grid;
@@ -371,6 +379,7 @@ a {
         }
 
         .scroll{
+            height: calc(100vh - 178px);
             overflow-y: scroll;
 
             &::-webkit-scrollbar{
@@ -379,7 +388,6 @@ a {
 
             .order{
                 width: 100%;
-                max-height: 64px;
                 background: white;
 
                 .small{
@@ -387,11 +395,128 @@ a {
                     justify-content: space-between;
                     grid-template-columns: repeat(5, 1fr);
                     line-height: 64px;
+                    height: 64px;
                     cursor: pointer;
                     transition: .2s;
 
+                    svg{
+                        margin: auto;
+                        fill:grey;
+                        width: 30px;
+                        height: 30px;
+                    }
+
                     &:hover{
                         background: rgba(153, 153, 153, .4);
+                    }
+                }
+
+                .full{
+                    width: calc(100% - 24px);
+                    max-height: 0px;
+                    margin: 12px;
+                    border: 0px solid lightgrey;
+                    border-radius: 5px;
+                    overflow: hidden;
+                    transition: .2s;
+
+                    &.active{
+                        max-height: 366px;
+                        border: 1px solid lightgrey;
+                    }
+
+                    .scroll{
+                        width: 100%;
+                        height: 300px;
+                        border-top-left-radius: 5px;
+                        border-top-right-radius: 5px;
+                        overflow: scroll;
+
+                        &::-webkit-scrollbar{
+                            width: 0;
+                        }
+
+                        a{
+                            .item{
+                                display: flex;
+                                width: 100%;
+                                height: 100px;
+                                padding: 12px;
+                                transition: .2s;
+                                overflow: hidden;
+
+                                &:hover{
+                                    background: rgba(153, 153, 153, .2);
+                                }
+
+                                img{
+                                    width: 78px;
+                                    height: 78px;
+                                    border-radius: 5px;
+                                }
+
+                                .info-block{
+                                    width: calc(100% - 178px);
+                                    height: 78px;
+                                    text-align: left;
+                                    padding-left: 12px;
+                                    overflow: hidden;
+
+                                    span{
+                                        font-size: 20px;
+
+                                        &.desc{
+                                            font-size: 18px;
+                                            color: grey;
+                                        }
+                                    }
+                                }
+
+                                .price{
+                                    width: 100px;
+                                    height: 78px;
+                                    text-align: center;
+                                    span{
+                                        font-size: 20px;
+                                        font-weight: bold;
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    .bottom{
+                        display: flex;
+                        justify-content: space-between;
+                        width: 100%;
+                        height: 64px;
+                        line-height: 40px;
+                        border-bottom-left-radius: 5px;
+                        border-bottom-right-radius: 5px;
+                        border-top: 1px solid lightgrey;
+
+                        span{
+                            font-size: 20px;
+                            color: grey;
+                            margin: 12px;
+
+                        }
+
+                        .btn{
+                            display: flex;
+
+                            svg{
+                                width: 34px;
+                                height: 34px;
+                                margin: 15px;
+                                cursor: pointer;
+                                transition: fill .2s;
+
+                                &:hover{
+                                    fill: $primary-orange;
+                                }
+                            }
+                        }
                     }
                 }
             }
