--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -269,6 +269,7 @@ a {
 }
 
 .body{
+    position: relative;
     width: calc(100% - 300px);
     height: 100vh;
 
@@ -523,6 +524,260 @@ a {
         }
         
     }
+
+    .users{
+        display: none;
+        
+        &.active{
+            display: block;
+            width: 100%;
+            height: calc(100vh - 129px);
+        }
+
+        h1{
+            width: 100%;
+            line-height: 64px;
+            font-weight: inherit;
+            font-size: 24px;
+            color: grey
+        }
+
+        .all-admin{
+            width: 100%;
+            height: calc(100vh - 258px);
+            overflow-y: scroll;
+
+            &::-webkit-scrollbar{
+                width: 0px;
+            }
+
+            .sort{
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr 64px;
+                width: 100%;
+                height: 40px;
+                line-height: 40px;
+
+                span{
+                    color: grey;
+                    transition: color .2s;
+                    cursor: pointer;
+                    border-left: 1px solid lightgrey;
+
+                    &:hover{
+                        color: $primary-orange;
+                    }
+                }
+            }
+
+            .admin{
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr 64px;
+                width: 100%;
+                height: 64px;
+                line-height: 64px;
+                transition: .2s;
+                
+                &:hover{
+                    background: rgba(153, 153, 153, .2);;
+                }
+
+                span{
+                    overflow: hidden;
+                }
+
+                svg{
+                    
+                    width: 30px;
+                    height: 30px;
+                    margin: auto;
+                    cursor: pointer;
+                    transition: fill .2s;
+
+                    &:hover{
+                        fill: $primary-orange;
+                    }
+                }
+            }
+        }
+
+        .btn-add-admin{
+            position: absolute;
+            bottom: 0;
+            width: calc(100% - 24px);
+            height: 64px;
+            margin: 0px 12px 0px 12px;
+            border-top: 1px solid lightgrey;
+            cursor: pointer;
+            line-height: 64px;
+            font-size: 18px;
+            color: grey;
+            transition: color .2s;
+
+            &:hover{
+                color: $primary-orange;
+            }
+        }
+    }
+}
+
+.blur-add {
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(153, 153, 153, .8);
+    z-index: 2;
+    transition: opacity .2s;
+
+    &.active {
+        opacity: 1;
+        pointer-events: all;
+    }
+}
+
+.add-admin-menu{
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    top: calc(50% - 300px);
+    left: calc(50% - 300px);
+    width: 600px;
+    height: 600px;
+    padding: 0 12px 0 12px;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0px 0px 20px rgba(153, 153, 153, .8);
+    z-index: 3;
+
+    &.active{
+        opacity: 1;
+        pointer-events: all;
+    }
+
+    h3{
+        line-height: 64px;
+        font-weight: inherit;
+        font-size: 20px;
+        color: grey;
+    }
+
+    .inp-block{
+        width: 400px;
+        height: 392px;
+        margin: auto;
+
+        div{
+            display: flex;
+            width: 100%;
+            margin-top: 12px;
+            margin-bottom: 12px;
+            border-radius: 5px;
+            border: 1px solid lightgrey;
+            transition: .2s;
+            text-align: left;
+
+            &:hover {
+                border-color: grey;
+            }
+
+            input{
+                width: calc(100% - 50px);
+                height: 50px;
+                border: 0;
+                border-radius: 5px;
+                padding-left: 10px;
+
+                &:focus-visible{
+                    outline: 0;
+                }
+            }
+
+            span{
+                svg{
+                    width: 30px;
+                    height: 30px;
+                    margin: 10px;
+                    fill: grey;
+                    cursor: pointer;
+                    transition: fill .2s;
+
+                    &:hover{
+                        fill: $primary-orange;
+                    }
+                }
+            }
+        }
+
+        select{
+            width: 100%;
+            height: 50px;
+            margin-top: 12px;
+            margin-bottom: 12px;
+            padding-left: 10px;
+            border-radius: 5px;
+            border: 1px solid lightgrey;
+            transition: .2s;
+            text-align: left;
+
+            &:hover {
+                border-color: grey;
+            }
+
+            &:focus-visible{
+                outline: 0;
+            }
+        }
+    }
+
+    .btn {
+        width: 100%;
+        height: 64px;
+        border: 0px;
+        padding: 0;
+        margin: 0;
+        line-height: 64px;
+        border-top: 1px solid lightgrey;
+        background: white;
+        font-size: 18px;
+        color: $primary-orange;
+        cursor: pointer;
+        transition: color .2s;
+
+        :focus-visible{
+            outline: 0;
+        }
+
+        &:hover{
+            color: grey;
+        }
+    }
+
+    .div-btn {
+        width: 100%;
+        height: 64px;
+        border: 0px;
+        padding: 0;
+        margin: 0;
+        line-height: 64px;
+        border-top: 1px solid lightgrey;
+        background: white;
+        font-size: 18px;
+        color: grey;
+        cursor: pointer;
+        transition: color .2s;
+
+        :focus-visible{
+            outline: 0;
+        }
+
+        &:hover{
+            color: $primary-orange;
+        }
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -553,6 +808,7 @@ a {
         height: 64px;
         width: 64px;
         cursor: pointer;
+        z-index: 1;
 
         svg {
             width: 50px;
