--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -16,8 +16,9 @@
 <body>
 
 <% if (locals.auth == true) {%>
-    <%- include('pages/admin-panel') %>
+    <%- include('pages/admin/admin-panel') %>
     <%- include('pages/admin/addAccount') %>
+    <%- include('pages/admin/editAccount') %>
 
 
 
