--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -333,16 +333,6 @@ a {
         }
     }
 
-    .main{
-        display: none;
-
-        &.active{
-            display: block;
-            width: 100%;
-            height: calc(100vh - 129px);
-        }
-    }
-
     .orders{
         display: none;
 
@@ -525,6 +515,296 @@ a {
         
     }
 
+    .categories{
+        display: none;
+        height: calc(100vh - 128px);
+        width: 100%;
+        padding: 12px;
+        flex-wrap: nowrap;
+        overflow-y: hidden;
+        overflow-x: scroll;
+
+        &.active{
+            display: flex;
+        }
+
+        &::-webkit-scrollbar{
+            height: 0px;
+        }
+
+        .category{
+            min-width: 300px;
+            max-height: calc(100vh - 128px);
+            border-left: 1px solid lightgrey;
+            padding-left: 12px;
+            overflow-y: scroll;
+
+            &::-webkit-scrollbar{
+                width: 0;
+            }
+
+            &.first{
+                border: 0px;
+                padding: 0;
+            }
+
+            h1{
+                text-align: left;
+                font-size: 26px;
+                margin-bottom: 12px;
+            }
+
+            .redact{
+                display: flex;
+                width: 100%;
+                height: 50px;
+                cursor: pointer;
+                
+
+                input{
+                    width: calc(100% - 100px);
+                    height: 50px;
+                    font-size: 18px;
+                    border: 0;
+                    outline: 0;
+                    background: 0;
+                }
+
+                svg{
+                    width: 30px;
+                    height: 30px;
+                    margin: 10px;
+                    fill: rgba(0, 0, 0, 0);
+                    transition: fill .2s;
+
+                }
+
+                .pencil{
+                    &.active{
+                        display: none;
+                    }
+                }
+
+                .done{
+                    display: none;
+                    &.active{
+                        display: block;
+                    }
+                }
+
+                &:hover{
+                    svg{
+                        fill: grey;
+                        transition: fill .2s;
+
+                        &:hover{
+                            fill: $primary-orange;
+                        }
+                    }
+                }
+
+            }
+
+            .add{
+                display: none;
+                width: 100%;
+                height: 50px;
+
+                &.active {
+                    display: flex;
+                }
+
+                input {
+                    width: calc(100% - 100px);
+                    height: 30px;
+                    margin: 10px 0 10px 0;
+                    border: 0px;
+                    border-bottom: 1px solid lightgrey;
+                    outline: 0;
+                    background: 0;
+                }
+
+                svg{
+                    width: 30px;
+                    height: 30px;
+                    margin: 10px;
+                    fill: grey;
+                    cursor: pointer;
+                    transition: .2s;
+
+                    &:hover{
+                        fill: $primary-orange;
+                    }
+
+                    &.close{
+                        stroke: grey;
+
+                        &:hover{
+                            stroke: $primary-orange;
+                        }
+                    }
+                }
+            }
+
+            .show-add-menu{
+                width: 100%;
+                height: 50px;
+                display: flex;
+
+                &.active{
+                    display: none;
+                }
+
+                span{
+                    color: $primary-orange;
+                    font-size: 18px;
+                    line-height: 50px;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+
+    .items{
+        display: none;
+        width: 100%;
+        height: calc(100vh - 192px);
+        padding: 12px;
+        overflow-y: scroll;
+
+        &::-webkit-scrollbar{
+            width: 0;
+        }
+
+        &.active{
+            display: block;
+        }
+
+
+        .item{
+            display: flex;
+            width: 100%;
+            height: 200px;
+            padding: 25px;
+            border-radius: 5px;
+            transition: .3s;
+
+            &:hover{
+                box-shadow: 0px 0px 20px rgba(153, 153, 153, .8);
+            }
+
+            .img-scroll {
+                position: relative;
+                display: flex;
+                width: 150px;
+                height: 150px;
+                cursor: pointer;
+
+                .hover-span-img {
+                    height: 152px;
+                    flex-grow: 1;
+                    -webkit-flex-grow: 1;
+                    margin-left: 5px;
+                    border-bottom: 1px solid grey;
+
+                    img {
+                        display: none;
+                        pointer-events: none;
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        bottom: 5px;
+                        left: 0;
+                        border-top-left-radius: 5px;
+                        border-top-right-radius: 5px;
+                        width: 150px;
+                        height: 150px;
+                    }
+
+                    &.active {
+                        border-color: $primary-orange;
+
+                        img {
+                            display: block;
+                        }
+                    }
+                }
+            }
+
+            .about-item{
+                padding-left: 12px;
+                padding-right: 12px;
+                width: calc(100% - 250px);
+                text-align: left;
+                display: block;
+                overflow: hidden;
+
+                a{
+                    font-size: 18px;
+                    transition: color .2s;
+
+                    &:hover{
+                        color: $primary-orange;
+                    }
+                }
+
+                span{
+                    font-size: 14px;
+                    color: grey;
+                }
+            }
+
+            .btn-menu{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                width: 100px;
+                height: 150px;
+                
+                span{
+                    font-size: 18px;
+                }
+
+                .btn-setting{
+                    display: flex;
+                    width: 100%;
+                    height: 50px;
+
+                    svg{
+                        width: 30px;
+                        height: 30px;
+                        margin: 10px;
+                        cursor: pointer;
+                        fill: grey;
+                        transition: fill .2s;
+
+                        &:hover{
+                            fill: $primary-orange;
+                        }
+                    }
+                }
+            }
+        }
+
+        .btn-add-item{
+            position: absolute;
+            bottom: 0;
+            left: 12px;
+            width: calc(100% - 24px);
+            height: 64px;
+            line-height: 64px;
+            color: $primary-orange;
+            font-size: 20px;
+            border-top: 1px solid lightgrey;
+            cursor: pointer;
+            transition: color .2s;
+
+            &:hover{
+                color: grey;
+            }
+        }
+    }
+
     .users{
         display: none;
         
@@ -587,10 +867,9 @@ a {
                 }
 
                 svg{
-                    
                     width: 30px;
                     height: 30px;
-                    margin: auto;
+                    margin: 17px auto 17px auto;
                     cursor: pointer;
                     transition: fill .2s;
 
@@ -755,27 +1034,152 @@ a {
             color: grey;
         }
     }
+}
 
-    .div-btn {
-        width: 100%;
-        height: 64px;
-        border: 0px;
-        padding: 0;
-        margin: 0;
-        line-height: 64px;
-        border-top: 1px solid lightgrey;
-        background: white;
-        font-size: 18px;
+.edit-account{
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    top: calc(50% - 250px);
+    left: calc(50% - 300px);
+    width: 600px;
+    height: 500px;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0px 0px 20px rgba(153, 153, 153, .8);
+    z-index: 3;
+
+    &.active{
+        opacity: 1;
+        pointer-events: all;
+    }
+
+    h3{
+        font-weight: inherit;
+        font-size: 24px;
         color: grey;
-        cursor: pointer;
-        transition: color .2s;
+    }
 
-        :focus-visible{
+    form{
+        width: 400px;
+        height: 330px;
+        margin: auto;
+
+        div{
+            position: relative;
+            display: flex;
+            width: 100%;
+            height: 50px;
+            margin: 12px 0 12px 0;
+            border: 1px solid lightgrey;
+            border-radius: 5px;
+            transition: .2s;
+
+            &:hover{
+                border-color: grey;
+            }
+
+            input{
+                width: calc(100% - 50px);
+                height: 50px;
+                border: 0px;
+                padding-left: 10px;
+                background: 0;
+
+                &:focus-visible{
+                    outline: 0;
+                }
+            }
+
+            svg{
+                position: absolute;
+                right: 10px;
+                top: 10px;
+                opacity: 1;
+                pointer-events: all;
+                cursor: pointer;
+                width: 30px;
+                height: 30px;
+                fill: grey;
+                transition: .2s;
+
+                &:hover{
+                    fill: $primary-orange;
+                }
+
+                &.active{
+                    opacity: 0;
+                    pointer-events: none;
+                }
+            }
+
+            .show{
+                opacity: 0;
+                pointer-events: none;
+
+                &.active{
+                    opacity: 1;
+                    pointer-events: all;
+                }
+            }
+        }
+        
+        select{
+            width: 100%;
+            height: 50px;
+            margin: 12px 0 12px 0;
+            padding-left: 10px;
+            border: 1px solid lightgrey;
+            border-radius: 5px;
+            transition: .2s;
+
+            &:hover{
+                border-color: grey;
+            }
+
+            &:focus-visible{
+                outline: 0;
+            }
+        }
+    }
+
+    button{
+        width: calc(100% - 24px);
+        height: 64px;
+        line-height: 64px;
+        background: white;
+        border: 0;
+        border-top: 1px solid lightgrey;
+        cursor: pointer;
+        color: $primary-orange;
+        font-size: 18px;
+        transition: color .2s;
+        
+        &:focus-visible{
             outline: 0;
         }
 
         &:hover{
-            color: $primary-orange;
+            color: grey;
+        }
+    }
+}
+
+.close-row{
+    text-align: right;
+    width: 100%;
+    height: 64px;
+    padding: 12px;
+
+    svg{
+        width: 40px;
+        height: 40px;
+        stroke: grey;
+        cursor: pointer;
+        transition: stroke .2s;
+
+        &:hover{
+            stroke: $primary-orange;
         }
     }
 }
