--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -19,9 +19,7 @@
     <%- include('pages/admin/admin-panel') %>
     <%- include('pages/admin/addAccount') %>
     <%- include('pages/admin/editAccount') %>
-
-
-
+    <%- include('pages/admin/addNewItem') %>
 
 <% } else { %> 
     <form action="" method="post" class="auth">
