--- a/views/pages/admin/admin-panel.ejs
+++ b/views/pages/admin/admin-panel.ejs
@@ -425,7 +425,7 @@
         </div>
         
     </div>
-    <div class="items active">
+    <div class="items selected">
         <div class="item">
             <div class="img-scroll" onmouseleave="leaveItem(this)">
                 <span class="hover-span-img first active" style="margin-left: 0px" onmouseenter="itemScroll(this)">
@@ -642,7 +642,7 @@
                 </div>
             </div>
         </div>
-        <div class="btn-add-item">
+        <div class="btn-add-item" onclick="addNewItem()">
             <span>Добавить товар</span>
         </div>
     </div>
